edits style and so

--- a/Michaela/Only indignant path copy/html/128.html
+++ b/Michaela/Only indignant path copy/html/128.html
@@ -8,6 +8,7 @@
     <script src="../js/p5.sound.min.js"></script>
     <script src="../js/p5.serialport.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 </head>
 
 <body onload="init()"
@@ -24,7 +25,7 @@ your substitution has now come to an end. We have located Soul 223 and accepted 
 
 We thank you very much for this substitution and we will make sure your efforts are rewarded in your future lives.<br><br>
 
-
+<br>
 
 Results:<br><br>
 
@@ -35,11 +36,11 @@ An opportunity will be created to establish justice.<br><br>
 
 &#x25B6; You helped with identifying a new virus, currently under the code <i>Emotional abuse</i>, which seems to be widespread.<br><br>
 
-&#x25B6; Soul 223 no longer perceives anger as a forbidden emotion. It has learned to listen to it and is ready to use it as a tool in the future for 
-any of the following: 
-<b>[Stand up for itself or others]
-     [Be aware of injustice] 
-     [Be motivated to create change]</b><br><br>
+
+&#x25B6; Soul 223 no longer perceives <b class="glitch" data-text="anger">anger</b> <b class="glow"></b> as a forbidden emotion. Thanks to the example you set, it has learned to listen to its anger and is ready to use it as a propeller for any of the following: 
+<b>[To stand up for itself or others], 
+     [To identify its values and beliefs],  
+     [As a motivation to act when a change is needed]</b> in the future.<br><br><br>
 
 Thank you again for reporting your emotions genuinely, it has shown to be useful for more than just filling in the database.<br><br>
             
