--- a/Michaela/Only indignant path copy/html/4.html
+++ b/Michaela/Only indignant path copy/html/4.html
@@ -15,7 +15,7 @@ id="soul">
 
 
     <div class="content">
-        <h2>We will ask you questions about your emotions, which Soultopilot will detect from the situations, to fill out your profile in the database. <br> <br>
+        <h2>We will ask you questions about your <b class="glitch" data-text="emotions">emotions</b> <b class="glow"></b>, which Soultopilot will detect from the situations, to fill out your profile in the database. <br> <br>
 
             When asked the questions, please answer honestly, there is no right or wrong. 
             This will allow us to identify your soul-character to be able to match you with fitting persons, 
