--- a/Michaela/Only indignant path copy/html/94.5.html
+++ b/Michaela/Only indignant path copy/html/94.5.html
@@ -28,11 +28,11 @@ I have been observing you for a while now, I'm sorry. I hope you don't mind. But
 
 
 
-Your anger levels.<br>
+Your <b class="glitch" data-text="anger">anger</b> <b class="glow"></b> levels.<br>
 
 They are different from how mine used to be. I was never angry... Or at least so I thought. I think every time I thought I might be feeling anger, Alex made it seem like I'm being wrong, so I just supressed it. Or directed it against me..
 
-So anger is a negative emotion, but it seems like you can use it for something positive? Maybe once you admit it, it becomes a tool for you. Like a hammer, that you can use to destruct or construct.
+So anger is a "negative" emotion, but it seems like you can use it for something positive? Maybe once you admit it, it becomes a tool for you. Like a hammer, that you can use to destruct or construct.
 
 But yeah, once you admit it.. why is already that so hard sometimes? The very first step: Admitting anger. Why does that feel so forbidden, so wrong... When it's just an emotion, like the other ones. I think that we feel it for a reason. That it tells us something about ourselves, about what is important to us. About what we believe in. That it can help us stand up for ourselves, or for others.<br><br>
 
