--- a/Michaela/Only indignant path copy/html/127.html
+++ b/Michaela/Only indignant path copy/html/127.html
@@ -33,7 +33,7 @@ the fact that you kept your own thinking and your own opinions. That you weren't
 
 
 
-They sent me a transcript of your decisions too. I will read it again every time I feel lost. To be inspired by you, to remember that to feel anger is as important as to feel joy. Hope, happiness. That it can motivate us, protect us.<br><br>
+They sent me a transcript of your decisions too. I will read it again every time I feel lost. To be inspired by you, to remember that to feel <b class="glitch" data-text="anger">anger</b> <b class="glow"></b> is as important as to feel joy. Hope, happiness. That it can motivate us, protect us.<br><br>
 
 I was manipulated by Alex, but someone like you, who was able to embrace their anger, was able to change things. You didn't hurt anyone with your anger, you just used it to be assertive, instead of supressing it and hurting yourself with it.<br><br>
 
