--- a/Michaela/Only indignant path copy/html/16.html
+++ b/Michaela/Only indignant path copy/html/16.html
@@ -17,7 +17,8 @@
                 to keep track of your emotional state, please report how you feel regarding the following
                 emotion:  Anger</h2>
             <h2>
-                Press save to report.
+                (Please drag the red area with your mouse to indicate.)
+                Then press Save to report.
             </h2>
         </div>
         <div>
