--- a/Michaela/Only indignant path copy/html/34.html
+++ b/Michaela/Only indignant path copy/html/34.html
@@ -17,7 +17,7 @@
                 to keep track of your emotional state, please report how you feel regarding the following
                 emotion:  Anger</h2>
             <h2>
-                Press save to report.
+                Indicate and then press Save to report.
             </h2>
         </div>
         <div>
