--- a/Michaela/Only indignant path copy/html/69.html
+++ b/Michaela/Only indignant path copy/html/69.html
@@ -16,7 +16,7 @@
             <h2> To keep track of your emotional state, please report how you feel regarding the following
                 emotion: Anger</h2>
             <h2>
-                Press save to report.
+                Indicate and then press Save to report.
             </h2>
         </div>
         <div>
